force-app/main/default/objects/arintern__c/arintern__c.object-meta.xml
<CustomObject>
    <label>arintern</label>
    <nameField>
        <label>Intern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>arinterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>