force-app/main/default/objects/arintern__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>