force-app/main/default/objects/arintern__c/fields/ARemail__c.field-meta.xml
<CustomField>
    <fullName>ARemail__c</fullName>
    <label>ARemail</label>
    <type>Email</type>
</CustomField>