force-app/main/default/objects/arintern__c/fields/ARphone__c.field-meta.xml
<CustomField>
    <fullName>ARphone__c</fullName>
    <label>ARphone</label>
    <type>Phone</type>
</CustomField>