force-app/main/default/objects/arintern__c/recordTypes/men.recordType-meta.xml
<RecordType>
    <fullName>men</fullName>
    <active>true</active>
    <label>men</label>
</RecordType>