force-app/main/default/objects/arintern__c/recordTypes/women.recordType-meta.xml
<RecordType>
    <fullName>women</fullName>
    <active>true</active>
    <label>women</label>
</RecordType>