force-app/main/default/objects/arintern__c/validationRules/phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    ISBLANK(ARphone__c) || 
    REGEX(ARphone__c, &quot;^[0-9]{10}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>ARphone__c</errorDisplayField>
    <errorMessage>phone number cannot be more than 10 digits</errorMessage>
</ValidationRule>