force-app/main/default/objects/arintern__c/listViews/ARinterns.listView-meta.xml
<ListView>
    <fullName>ARinterns</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>address__c</field>
        <operation>equals</operation>
        <value>gachibowli</value>
    </filters>
    <label>#ARinterns</label>
</ListView>